# unifi-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.context/compound-engineering/ce-review/20260426-135817-f75bedbe/: agent-native.md  api-contract.json  correctness.json  kieran-python.json  learnings.md  maintainability.json  project-standards.json  testing.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/adr/: 0000-template.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/plans/: 2026-04-16-001-feat-unifi-mcp-server-plan.md
docs/superpowers/plans/: 2026-04-27-protect-mcp-live-test-plan.md  2026-04-28-network-comprehensive-test.md
docs/superpowers/specs/: 2026-04-27-network-comprehensive-test-design.md  2026-04-27-protect-mcp-live-test-plan.md
scripts/: archive_events_probe.py  live_test_discovery.py  route_payload_probe.py
src/unifi_mcp/: __init__.py  __main__.py  _logging.py  _redaction.py  config.py  errors.py  server.py
src/unifi_mcp/clients/: __init__.py  _pinning.py  base.py  network.py  protect.py  site_manager.py
src/unifi_mcp/models/: __init__.py  common.py  network.py  protect.py  site_manager.py
src/unifi_mcp/tools/: __init__.py  _common.py
src/unifi_mcp/tools/network/: __init__.py  clients.py  devices.py  firewall.py  networks.py  port_forward.py  port_profiles.py  routing.py  stats.py  system.py  wlan.py
src/unifi_mcp/tools/protect/: __init__.py  cameras.py  devices.py  events.py  media.py  nvr.py
src/unifi_mcp/tools/site_manager/: __init__.py  discovery.py
tests/: conftest.py
tests/fixtures/: network_responses.json  protect_responses.json  site_manager_responses.json
tests/integration/: conftest.py  test_all_tools_live.py  test_network_clients_live.py  test_network_device_lifecycle_live.py  test_network_device_ops_live.py  test_network_firewall_live.py  test_network_live.py  test_network_networks_live.py  test_network_port_forward_live.py  test_network_port_profiles_live.py  test_network_routes_live.py  test_network_update_settings_live.py  test_network_wlan_live.py  test_protect_live.py  test_protect_writes_live.py  test_site_manager_live.py  test_stdio_transport.py
tests/property/: test_errors_classify.py  test_path_validators.py
tests/unit/: test_audit_inventory.py  test_config.py  test_errors.py  test_live_write_abort_hook.py  test_logging.py  test_redaction.py  test_server.py  test_server_lifespan.py  test_touched_devices.py  test_version.py
tests/unit/clients/: test_base.py  test_cancellation.py  test_network.py  test_network_extra.py  test_path_traversal.py  test_pinning.py  test_protect.py  test_protect_extra.py  test_retry_timing.py  test_site_manager.py  test_ssl_verification.py  test_url_contracts.py
tests/unit/tools/: test_concurrent_tool_calls.py  test_dangerous_key_denylist.py  test_handler_bodies.py  test_handler_bodies_full.py  test_handler_error_paths.py  test_input_bounds.py  test_list_bounds.py  test_network_clients.py  test_network_devices.py  test_network_firewall.py  test_network_networks.py  test_network_port_forward.py  test_network_port_profiles.py  test_network_routing.py  test_network_stats.py  test_network_system.py  test_network_update_settings_named_args.py  test_network_wlan.py  test_path_segment_validators.py  test_protect_cameras.py  test_protect_devices.py  test_protect_events.py  test_protect_media.py  test_protect_named_args.py  test_protect_nvr.py  test_redaction_at_tool_layer.py  test_site_manager.py  test_validator_rollout.py  test_writes_enabled_defense.py
