[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-mcp"
version = "0.1.0"
description = "Production-grade Python MCP server for UniFi Site Manager, Network, and Protect APIs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "millsmillsymills" }]
keywords = ["unifi", "mcp", "model-context-protocol", "ubiquiti", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.2.4,<4.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.2.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.23.1",
    "ruff>=0.4.0",
    "mypy>=1.20.1",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
unifi-mcp = "unifi_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/millsmillsymills/unifi-mcp"
Repository = "https://github.com/millsmillsymills/unifi-mcp"
Issues = "https://github.com/millsmillsymills/unifi-mcp/issues"

# =============================================================================
# Ruff — linting and formatting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # flake8-logging
    "TID",  # flake8-tidy-imports
]
ignore = [
    "S101",    # assert used — fine in tests
    "S603",    # subprocess call — not relevant for MCP server
    "PLR0913", # too many function arguments — tool functions need many params
    "PLR0915", # too many statements — registration functions register many tools
    "PLR2004", # magic value comparison — acceptable in tests
    "PLC0415", # import not at top level — intentional for lazy loading and circular dep avoidance
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ARG001",  # unused function args (fixtures)
    "PLR2004", # magic values in tests
    "S106",    # hardcoded passwords in test fixtures
]
# FastMCP introspects type annotations at runtime, so Context/FastMCP must not be behind TYPE_CHECKING
"src/unifi_mcp/tools/**/*.py" = [
    "TC001",   # application imports needed at runtime for FastMCP annotation introspection
    "TC002",   # third-party imports needed at runtime for FastMCP annotation introspection
]

[tool.ruff.lint.isort]
known-first-party = ["unifi_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# Mypy — strict type checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "respx.*"
ignore_missing_imports = true

# =============================================================================
# Pytest — testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require live UniFi hardware (deselect with '-m \"not integration\"')",
    "slow: marks tests that are slow to run",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-x",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:httpx.*",
]

[tool.coverage.run]
source = ["unifi_mcp"]
branch = true
omit = ["tests/*", "src/unifi_mcp/__main__.py"]

[tool.coverage.report]
fail_under = 40
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# =============================================================================
# Bandit — security scanning
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used — fine in production code for invariants

# =============================================================================
# Hatch — build configuration
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/unifi_mcp"]
